[project]
name = "gtfs-rt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "emoji-country-flag>=2.0.1",
    "gtfs-realtime-bindings>=1.0.0",
    "paho-mqtt>=2.1.0",
    "pycountry>=24.6.1",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
]
